--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ dj3-cloudinary-storage==0.0.6
 Django==3.2.19
 django-crispy-forms==2.0
 gunicorn==20.1.0
+Pillow==10.0.0
 psycopg2==2.9.6
 pytz==2023.3
 sqlparse==0.4.4
